--- a/package.json
+++ b/package.json
@@ -1,58 +1,58 @@
 {
-    "name": "portfolio-vuejs",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint",
-        "deploy": "sh deploy.sh"
+  "name": "portfolio-vuejs",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "deploy": "sh deploy.sh"
+  },
+  "dependencies": {
+    "@cosmicjs/sdk": "^1.5.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
+    "@growthbunker/vuetimeline": "0.1.17",
+    "bootstrap": "^4.6.2",
+    "bootstrap-vue": "^2.23.1",
+    "core-js": "^3.32.1",
+    "css-loader": "^5.2.0",
+    "vue": "^2.7.16",
+    "vue-carousel": "^0.18.0",
+    "vue-style-loader": "^4.1.3",
+    "vue2-animate": "^2.1.4"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.12",
+    "@vue/cli-plugin-eslint": "~4.5.12",
+    "@vue/cli-service": "~4.5.12",
+    "babel-eslint": "10.1.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-vue": "6.2.2",
+    "sass": "^1.94.2",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "vue-template-compiler": "2.7.16"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
     },
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.35",
-        "@fortawesome/free-brands-svg-icons": "^5.15.3",
-        "@fortawesome/free-solid-svg-icons": "^5.15.3",
-        "@fortawesome/vue-fontawesome": "^2.0.2",
-        "@growthbunker/vuetimeline": "^0.1.17",
-        "bootstrap": "^4.6.0",
-        "core-js": "^3.9.1",
-        "cosmicjs": "^3.3.1",
-        "css-loader": "^5.2.0",
-        "vue": "^2.6.12",
-        "vue-carousel": "^0.18.0",
-        "vue-style-loader": "^4.1.3",
-        "vue2-animate": "^2.1.4"
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
     },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "~4.5.12",
-        "@vue/cli-plugin-eslint": "~4.5.12",
-        "@vue/cli-service": "~4.5.12",
-        "babel-eslint": "^10.1.0",
-        "bootstrap-vue": "^2.21.2",
-        "eslint": "^7.23.0",
-        "eslint-plugin-vue": "^7.8.0",
-        "node-sass": "^5.0.0",
-        "sass-loader": "^10.1.1",
-        "style-loader": "^2.0.0",
-        "vue-template-compiler": "^2.6.12"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "eslint:recommended"
-        ],
-        "parserOptions": {
-            "parser": "babel-eslint"
-        },
-        "rules": {}
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not dead"
-    ]
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
